# 2DBallsCollisions

./: CMakeLists.txt  README.md
docs/documentation/: create-appImage.md
src/: main.c
src/application/: collisions_manager.c  collisions_manager.h  globals.h
src/engine/: ebase.c  ebase.h  eglobals.c  eglobals.h  emath.c  emath.h  engine.h  erenderer.c  erenderer.h
utils/MyApp.AppDir/: AppRun  MyApp.desktop
utils/configuration/.vscode-linux/: c_cpp_properties.json  launch.json  settings.json
utils/configuration/.vscode-windows/: c_cpp_properties.json  launch.json  settings.json  tasks.json
